k8s-base-apps/modules/k8s-eck/es-stack.yaml
apiVersion: v1
kind: Service
metadata:
  name: apm-apm-http
spec:
  selector:
    agent.k8s.elastic.co/name: elastic-agent
  ports:
  - protocol: TCP
    port: 8200
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana-ingress
  namespace: default
  # annotations:
  #   kubernetes.io/ingress.class: nginx
  #   kubernetes.io/tls-acme: "true"
  #   nginx.ingress.kubernetes.io/rewrite-target: /
  #   # type of authentication
  #   nginx.ingress.kubernetes.io/auth-type: basic
  #   # name of the secret that contains the user/password definitions
  #   nginx.ingress.kubernetes.io/auth-secret: basic-auth
  #   # message to display with an appropriate context why the authentication is required
  #   nginx.ingress.kubernetes.io/auth-realm: "Authentication Required"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - "k8s-kibana.zizi.press"
    secretName: zizi-press-tls
  rules:
  - host: "k8s-kibana.zizi.press"
    http:
      paths:
      # Root URI / is required for kibana logging
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: kibana-kb-http
            port:
              number: 5601
  - host: "k8s-kibana-d.zizi.press"
    http:
      paths:
      # Root URI / is required for kibana logging
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: kibana-kb-http
            port:
              number: 5601
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: es-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - "k8s-es.zizi.press"
    secretName: zizi-press-tls
  rules:
  - host: "k8s-es.zizi.press"
    http:
      paths:
      # Root URI / is required for kibana logging
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: elasticsearch-es-http
            port:
              number: 9200
  - host: "k8s-es-d.zizi.press"
    http:
      paths:
      # Root URI / is required for kibana logging
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: elasticsearch-es-http
            port:
              number: 9200
